# companion_network

./: .env.example  .gitattributes  .gitignore  README.md  app.py  pyproject.toml
alice_companion/: agent.py  http_endpoint.py  mcp_client.py  mcp_server.py  sqlite_session_service.py  user_context.py
bob_companion/: agent.py  http_endpoint.py  mcp_client.py  mcp_server.py  user_context.py
docs/: architecture.md  bmm-workflow-status.yaml  companion_network.md  epics.md  implementation-readiness-report-2025-11-30.md  prd.md  ux-color-themes.html  ux-design-directions.html  ux-design-specification.md  ux-user-flows.html
shared/: a2a_logging.py  availability.py  coordination.py  models.py  sqlite_session_service.py
tests/: check_session_state.py  diagnose_runtime.py  test_a2a_communication.py  test_agent_integration.py  test_alice_agent.py  test_availability_checking.py  test_bob_agent.py  test_chat_interface.py  test_check_availability_tool.py  test_coordination_parsing.py  test_end_to_end_demo.py  test_event_proposal.py  test_mcp_client.py  test_models.py  test_network_monitor.py  test_network_monitor_integration.py  test_propose_event_tool.py  test_relay_message_tool.py  test_share_context_tool.py  test_user_context.py  test_with_app.py  verify_a2a_communication.py  verify_a2a_improvements.py  verify_agent_integration.py  verify_alice_agent.py  verify_availability_checking.py  verify_bob_agent.py  verify_chat_interface.py  verify_check_availability_tool.py  verify_coordination_parsing.py  verify_dependencies.py  verify_end_to_end_demo.py  verify_event_proposal.py  (+10 more)
(+21 files in other folders)
